welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:7: error: ')' expected but ';' found.
    	else(max2=max;max=nums(i))
                     ^max2Value:7: error: ';' expected but ')' found.
    	else(max2=max;max=nums(i))
                                 ^